# Jetpack-MVVM

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/cpp/: CMakeLists.txt  Person.cpp  Person.h  native-lib.cpp
app/src/androidTest/java/com/alex/androidjetpack/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/alex/androidjetpack/app/: App.kt
app/src/main/java/com/alex/androidjetpack/data/: MainRepository.kt
app/src/main/java/com/alex/androidjetpack/ui/: App.kt  ListActivity.kt  LoginActivity.kt  MainActivity.kt  MainViewModel.kt  MainViewModelFactory.kt  MyViewModel.kt  NDKDemoActivity.java  ResultActivity.kt  TestUIEventActivity.java
app/src/main/java/com/alex/androidjetpack/util/: InjectorUtil.kt
app/src/main/java/com/alex/androidjetpack/viewmodel/: LoginViewModel.kt
app/src/main/res/layout/: activity_list.xml  activity_login.xml  activity_main.xml  activity_maplinedemo.xml  activity_ndk.xml  activity_result.xml  activity_ui_arm.xml  activity_ui_event_test.xml  activity_ui_inter_parent.xml  dialog_loading.xml
app/src/main/res/values/: colors.xml  styles.xml
app/src/test/java/com/alex/androidjetpack/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
jetpackmvvm/: build.gradle
jetpackmvvm/src/androidTest/java/com/alex/jetpackmvvm/: ExampleInstrumentedTest.kt
jetpackmvvm/src/main/: AndroidManifest.xml
jetpackmvvm/src/main/java/com/alex/jetpackmvvm/: test.java
jetpackmvvm/src/test/java/com/alex/jetpackmvvm/: ExampleUnitTest.kt
(+28 files in other folders)
